# credit-scoring

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  IMPROVEMENTS.md  RESULTS.md
scripts/: run_ablation.py  run_eda.py  run_pipeline.py
src/creditscore/: __init__.py  cli.py  config.py  schemas.py
src/creditscore/app/: __init__.py  flask_app.py
src/creditscore/app/static/: app.js  style.css
src/creditscore/app/templates/: index.html
src/creditscore/data/: __init__.py  database.py  etl.py  generate.py
src/creditscore/eda/: __init__.py  explore.py
src/creditscore/evaluation/: __init__.py  ablation.py  metrics.py
src/creditscore/models/: __init__.py  pipeline.py  predict.py  registry.py  train.py
tests/: test_etl.py  test_metrics.py  test_models.py
